# sget

./: .gitignore  README.md
.github/workflows/: cmake-multi-platform.yml  sget-cli.yml
cli/: CMakeLists.txt  vcpkg.json
cli/include/: colors.hpp  network.hpp  parser.hpp
cli/src/: main.cpp  network.cpp  parser.cpp
scripts/: install.bat
web/: README.md  package.json  pnpm-lock.yaml
web/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
web/.svelte-kit/types/: route_meta_data.json
web/.svelte-kit/types/src/routes/: $types.d.ts
web/.svelte-kit/types/src/routes/documentation/: $types.d.ts
web/.svelte-kit/types/src/routes/download/: $types.d.ts
web/src/: app.html
web/src/lib/components/: Footer.svelte  Header.svelte
web/src/routes/: +layout.svelte  +page.svelte  fonts.scss
web/src/routes/about/: +page.svelte
web/src/routes/contact/: +page.svelte
web/src/routes/documentation/: +page.svelte
web/src/routes/download/: +page.svelte
